SOLR-9963: Add Apache Calcite Avatica handler to Solr
Signed-off-by: Kevin Risden <krisden@apache.org>

--- a/lucene/ivy-versions.properties
+++ b/lucene/ivy-versions.properties
@@ -104,6 +104,8 @@ net.thisptr.version = 0.0.8
 
 org.apache.calcite.avatica.version = 1.13.0
 /org.apache.calcite.avatica/avatica-core = ${org.apache.calcite.avatica.version}
+/org.apache.calcite.avatica/avatica-metrics = ${org.apache.calcite.avatica.version}
+/org.apache.calcite.avatica/avatica-server = ${org.apache.calcite.avatica.version}
 
 org.apache.calcite.version = 1.18.0
 /org.apache.calcite/calcite-core = ${org.apache.calcite.version}
