--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ addons:
     - oracle-java8-installer
 git:
   depth: 1
-branches:
-  except:
-  - master
 env:
 - DIR=. COMMAND="ant precommit" ANT_OPTS="-Xms1024m -Xmx2048m -XX:MaxPermSize=256m"
 - DIR=solr COMMAND="ant -Dtests.class=org.apache.solr.client.solrj.io.stream.Stream*Test
@@ -26,6 +23,8 @@ script:
 - ant ivy-bootstrap
 - cd $DIR
 - "$COMMAND"
+after_success:
+  - bash <(curl -s https://copilot.blackducksoftware.com/ci/travis/scripts/upload)
 before_deploy: cd .. && sed -i'' -e "s/BRANCH/${TRAVIS_BRANCH}/g" descriptor.json
 deploy:
   provider: bintray
