--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: java
 jdk:
-- oraclejdk8
+- openjdk11
 addons:
   apt:
     packages:
     - python3
-    - oracle-java8-installer
 git:
   depth: 1
 env:
